// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs matches snapshot for connector edit path 1`] = `
<nav
  aria-label="breadcrumbs"
  className="breadcrumb"
>
  <ul>
    <li>
      <a
        href="/ui/clusters/my-cluster/connectors"
        onClick={[Function]}
      >
        All Connectors
      </a>
    </li>
    <li>
      <a
        href="/ui/clusters/my-cluster/connects/my-connect/connectors/my-connector"
        onClick={[Function]}
      >
        my-connector
      </a>
    </li>
    <li
      className="is-active"
    >
      <span
        className=""
      >
        Edit
      </span>
    </li>
  </ul>
</nav>
`;

exports[`Breadcrumbs matches snapshot for connector path 1`] = `
<nav
  aria-label="breadcrumbs"
  className="breadcrumb"
>
  <ul>
    <li>
      <a
        href="/ui/clusters/my-cluster/connectors"
        onClick={[Function]}
      >
        All Connectors
      </a>
    </li>
    <li
      className="is-active"
    >
      <span
        className=""
      >
        my-connector
      </span>
    </li>
  </ul>
</nav>
`;

exports[`Breadcrumbs matches snapshot for new connector path 1`] = `
<nav
  aria-label="breadcrumbs"
  className="breadcrumb"
>
  <ul>
    <li>
      <a
        href="/ui/clusters/my-cluster/connectors"
        onClick={[Function]}
      >
        All Connectors
      </a>
    </li>
    <li
      className="is-active"
    >
      <span
        className=""
      >
        New Connector
      </span>
    </li>
  </ul>
</nav>
`;

exports[`Breadcrumbs matches snapshot for root path 1`] = `
<nav
  aria-label="breadcrumbs"
  className="breadcrumb"
>
  <ul>
    <li
      className="is-active"
    >
      <span
        className=""
      >
        All Connectors
      </span>
    </li>
  </ul>
</nav>
`;
